fix onepiece overflow bug

--- a/resources/assets/css/style.styl
+++ b/resources/assets/css/style.styl
@@ -2,6 +2,9 @@ font-color = #551800
 y1-bgcolor = #BFE3DF
 y2-bgcolor = #90CBF5
 y3-bgcolor = #FFEFA7
+
+html
+    overflow-x hidden
 @media only screen and (min-width: 320px)
     html
         font-size: 96px
@@ -47,7 +50,7 @@ a:visited
 
 .main
     font-size: 12px
-    overflow-x: hidden
+    overflow-x hidden
     font-family: '微软雅黑'
     background-position: top center
     background-size: cover
